--- a/Weatherly/src/components/Weatherly.css
+++ b/Weatherly/src/components/Weatherly.css
@@ -16,8 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: black;
-    
+    background-color: black;   
     margin: 0;
 }
 
@@ -48,10 +47,10 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(202, 143, 229, 0.497);
     border-radius: 30px;
     padding: 5px 10px;
-    border: 1px solid var(--glass-border);
+    border: 1px solid rgba(0, 0, 0, 0.022);
 }
 
 .weather__search-bar input {
@@ -62,11 +61,10 @@ body {
     padding: 10px;
     font-size: 16px;
     color: var(--text-color);
-    caret-color: var(--text-color);
 }
 
 .weather__search-bar input::placeholder{
-     color: rgba(255, 255, 255, 0.7);
+     color: rgba(0, 0, 0, 0.371);
 }
 
 .weather__search-bar img {
@@ -77,15 +75,15 @@ body {
 .search_btn {
     background: var(--btn-bg);
     border: none;
-    padding: 10px;
+    padding: 6px;
     border-radius: 50%;
     cursor: pointer;
     transition: background 0.3s ease-in-out;
 }
 
 .search_btn img {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
 }
 
 .search_btn:hover {
@@ -151,7 +149,7 @@ body {
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: translateY(-20px);
+        transform: translateY(-30px);
     }
     to {
         opacity: 1;
